src/tests/ci/assignment_5_functions/valid/23_all_paths_return_if_else.c
int abs_val(int x) {
    if (x < 0) {
        return -x;
    } else {
        return x;
    }
}

int main() {
    return abs_val(-5);
}