src/tests/ci/assignment_5_functions/invalid_semantic/20_wrong_argument_type.c
int foo(int* p) {
    return 0;
}

int main() {
    int x = 5;
    return foo(x);
}